bugfix 11.画像选择画面,[x]按钮不好用.(封面) 9.素材选择画面,x滚动条,什么时候使用 20. case menu 类型时,素材可以多选,但是显示[only one page] 19.编辑画面,封面素材点击时,封面图片不显示. 5.元素编辑画面,case menu的封面,不能显示. 17.从素材一览删除元素使用的素材后,元素一览画面一条记录都没有 15.画像选择画面,不能表示所有素材. 6.元素新规画面,什么不入力,直接点击保存按钮,弹出情报入力画面? 3.元素一览,点击表纸的图片时,显示的不是合成的图片,按钮名:close 1.元素一览画面,表纸的背景图片是头像?

--- a/public/stylesheets/contents.css
+++ b/public/stylesheets/contents.css
@@ -208,13 +208,11 @@
   width: 100%;
 }
 .action_widget_image {
-  margin-left: 146px;
-  margin-top: 9px;
+  margin-left: 133px;
 }
 .action_widget_image_preview {
   width: 150px;
   height: 150px;
-  padding: 2px;
   border: 1px solid #e4e4e4;
   overflow: scroll;
 }
@@ -224,19 +222,18 @@
 .action_jump_preview {
   width: 150px;
   height: 150px;
-  padding: 2px;
   border: 1px solid #e4e4e4;
-  margin-left: 160px;
 }
 .action_jump_preview img {
   width: 100%;
 }
+.action_widget_moive {
+  margin-left: 133px;
+}
 .action_widget_moive_preview {
   width: 150px;
   height: 150px;
-  padding: 2px;
   border: 1px solid #e4e4e4;
-  margin-left: 110px;
 }
 .action_widget_moive_preview video {
   width: 100%;
@@ -335,4 +332,7 @@ div:hover > .tools.tools-right {
   list-style: none;
   padding-left: 0px;
   margin: 0 0 0px 0;
+}
+#_action_type_jump {
+  margin-left: 133px;
 }
