--- a/public/stylesheets/contents.less
+++ b/public/stylesheets/contents.less
@@ -1,168 +1,168 @@
 #viewport {
-    height: 158px;
+  height: 158px;
 }
 
 #thumb_panel {
-    width: 1000px;
-    max-height: 158px;
-    min-height: 158px;
-   /** border: 1px solid #e5e5e5;  ysl */
+  width: 1000px;
+  max-height: 158px;
+  min-height: 158px;
+  /** border: 1px solid #e5e5e5;  ysl */
 
 }
 
 #thumb_panel .thumb {
-    float: left;
-    max-height: 156px;
+  float: left;
+  max-height: 156px;
 
 }
 
 #thumb_panel .thumb img {
-    max-height: 150px;
-    width: 100%;
-    margin: 1px;
+  max-height: 150px;
+  width: 100%;
+  margin: 1px;
 }
 
 #thumb_panel .material {
-    float: left;
-    height: 156px;
-    width: 1000px;
-    overflow-x: scroll;
-    overflow-y: hidden;
+  float: left;
+  height: 156px;
+  width: 1000px;
+  overflow-x: scroll;
+  overflow-y: hidden;
 }
 
 .thumb_block {
-    position: relative;
-    height: 150px;
-    width: 220px;
-    float: left;
-    margin: 1px 1px 1px 1px;
-    overflow-x: hidden;
-    overflow-y: hidden;
+  position: relative;
+  height: 150px;
+  width: 220px;
+  float: left;
+  margin: 1px 1px 1px 1px;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 .thumb_block_img {
-    position: relative;
-    height: 150px;
-    width: 100%;
+  position: relative;
+  height: 150px;
+  width: 100%;
 }
 
 .thumb_block_span {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    display: none;
-    background: #e5e5e5;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  display: none;
+  background: #e5e5e5;
 }
 
 .thumb_block_left {
-    position: absolute;
-    top: 58px;
-    right: 200px;
-    display: none;
-    background: #e5e5e5;
+  position: absolute;
+  top: 58px;
+  right: 200px;
+  display: none;
+  background: #e5e5e5;
 }
 
 .thumb_block_right {
-    position: absolute;
-    top: 58px;
-    right: 13px;
-    display: none;
-    background: #e5e5e5;
+  position: absolute;
+  top: 58px;
+  right: 13px;
+  display: none;
+  background: #e5e5e5;
 }
 
 #main_panel {
-    /**border: solid 1px #d3d3d3;ysl*/
-    width: 706px;
-    height: 500px;
-    margin-top: 10px;
-    float: left;
-    margin: 10px 10px 10px 0px;
-    text-align: center;
-    position: relative;
+  /**border: solid 1px #d3d3d3;ysl*/
+  width: 706px;
+  height: 500px;
+  margin-top: 10px;
+  float: left;
+  margin: 10px 10px 10px 0px;
+  text-align: center;
+  position: relative;
 }
 
 #main_panel img {
-    height: 500px;
-    width: 100%;
+  height: 500px;
+  width: 100%;
 }
 
 .modalfix_box {
-    position: relative;
-    width: 100px;
-    height: 100px;
-    float: left;
-    margin: 2px
+  position: relative;
+  width: 100px;
+  height: 100px;
+  float: left;
+  margin: 2px
 }
 
 .modalfix_checkbox {
-    left: 66px;
-    bottom: 0px;
-    position: absolute;
-    display: none;
-    z-index: 2001;
+  left: 66px;
+  bottom: 0px;
+  position: absolute;
+  display: none;
+  z-index: 2001;
 }
 
 .checked {
-    display: block !important;
+  display: block !important;
 }
 
 .material_cell {
-    overflow-x: scroll;
-    overflow-y: hidden;
-    height: 156px;
-    margin-left: 2px;
+  overflow-x: scroll;
+  overflow-y: hidden;
+  height: 156px;
+  margin-left: 2px;
 }
 
 .modal-open {
-    margin-right: 0px !important;
+  margin-right: 0px !important;
 }
 
 #content_panel {
-    width: 1050px;
-    margin: 0px 0 0 0;
-    min-height: 514px;
-    border: 1px solid #e5e5e5;
+  width: 1050px;
+  margin: 0px 0 0 0;
+  min-height: 514px;
+  border: 1px solid #e5e5e5;
 }
 
 #widget_panel {
-    border: solid 1px #d3d3d3;
-    float: left;
-    height: 500px;
-    width: 300px;
-    margin: 10px 0px 10px 0px;
+  border: solid 1px #d3d3d3;
+  float: left;
+  height: 500px;
+  width: 300px;
+  margin: 10px 0px 10px 0px;
 }
 
 #widget_panel .title {
-    border-bottom: 1px solid #e5e5e5;
-    height: 35px;
-    background: #f5f5f5;
+  border-bottom: 1px solid #e5e5e5;
+  height: 35px;
+  background: #f5f5f5;
 }
 
 #widget_panel .title span {
-    line-height: 35px;
-    padding-left: 10px;
-    font-size: 16px;
+  line-height: 35px;
+  padding-left: 10px;
+  font-size: 16px;
 }
 
 #widget_panel .title .title_btn {
-    margin-top: 2px;
-    margin-right: 2px;
+  margin-top: 2px;
+  margin-right: 2px;
 }
 
 #widget_panel .widget_body {
-    margin-right: 10px;
-    margin-top: 10px;
-    /*width: 100%;*/
-    height: 300px;
+  margin-right: 10px;
+  margin-top: 10px;
+  /*width: 100%;*/
+  height: 300px;
 }
 
 #widget_panel .widget_body form {
-    width: 100%;
-    height: 300px;
+  width: 100%;
+  height: 300px;
 }
 
 .action_type {
-    display: none;
+  display: none;
 }
 
 #metadata_panel {
@@ -170,64 +170,64 @@
 }
 
 #metadata_panel {
-    border: solid 1px #d3d3d3;
-    float: left;
-    height: 500px;
-    width: 300px;
-    margin: 10px 0px 10px 0px;
-    font-size:12px;
+  border: solid 1px #d3d3d3;
+  float: left;
+  height: 500px;
+  width: 300px;
+  margin: 10px 0px 10px 0px;
+  font-size:12px;
 }
 
 #metadata_panel .title {
-    border-bottom: 1px solid #e5e5e5;
-    height: 35px;
-    background: #f5f5f5;
+  border-bottom: 1px solid #e5e5e5;
+  height: 35px;
+  background: #f5f5f5;
 }
 
 #metadata_panel .title span {
-    line-height: 35px;
-    padding-left: 10px;
-    font-size: 16px;
+  line-height: 35px;
+  padding-left: 10px;
+  font-size: 16px;
 }
 
 #metadata_panel .title .title_btn {
-    margin-top: 2px;
-    margin-right: 2px;
+  margin-top: 2px;
+  margin-right: 2px;
 }
 
 #metadata_panel .widget_body {
-    margin-right: 10px;
-    margin-top: 10px;
-    /*width: 100%;*/
-    height: 300px;
+  margin-right: 10px;
+  margin-top: 10px;
+  /*width: 100%;*/
+  height: 300px;
 }
 
 #metadata_panel .widget_body form {
-    width: 100%;
-    mix-height: 50px;
+  width: 100%;
+  mix-height: 50px;
 }
 
 #preview {
-    border: 1px solid #e3e3e3;
-    width: 100%;
-    margin-left: 5px;
-    background: #e5e5e5;
+  border: 1px solid #e3e3e3;
+  width: 100%;
+  margin-left: 5px;
+  background: #e5e5e5;
 
 }
 
 #preview img {
-    width: 100%;
+  width: 100%;
 }
 .panelheader {
-    margin-left: 30px;
+  margin-left: 30px;
 }
 
 
 .coverpanel h4{
-    margin-left: 30px;height: 156px;color:#000000;
+  margin-left: 30px;height: 156px;color:#000000;
 }
 .coverpanel img{
-    height: 150px;
+  height: 150px;
 }
 .cover_add {
 
@@ -235,165 +235,170 @@
 
 .cover_block{
 
-    position: relative;
-    height: 150px;
-    width: 220px;
-    float: left;
-    overflow-x: hidden;
-    margin: 1px 1px 1px 1px;
+  position: relative;
+  height: 150px;
+  width: 220px;
+  float: left;
+  overflow-x: hidden;
+  margin: 1px 1px 1px 1px;
 }
 
 .cover_block_img {
-    position: relative;
-    height: 150px;
-    width: 100%;
+  position: relative;
+  height: 150px;
+  width: 100%;
 }
 
 .action_widget_image {
-    margin-left: 146px;
-    margin-top: 9px;
+  margin-left: 133px;
 }
 .action_widget_image_preview {
-    width: 150px;
-    height: 150px;
-    padding: 2px;
-    border: 1px solid #e4e4e4;
-    overflow: scroll;
+  width: 150px;
+  height: 150px;
+
+  border: 1px solid #e4e4e4;
+  overflow: scroll;
 }
 .action_widget_image_preview img{
-    width: 100%;
+  width: 100%;
 }
 
 .action_jump_preview{
-    width: 150px;
-    height: 150px;
-    padding: 2px;
-    border: 1px solid #e4e4e4;
-    margin-left: 160px;
+  width: 150px;
+  height: 150px;
+  border: 1px solid #e4e4e4;
 }
 
 .action_jump_preview img{
-    width: 100%;
+  width: 100%;
+}
+
+
+.action_widget_moive{
+  margin-left: 133px;
 }
 
 
 .action_widget_moive_preview{
-    width: 150px;
-    height: 150px;
-    padding: 2px;
-    border: 1px solid #e4e4e4;
-    margin-left: 110px;
+  width: 150px;
+  height: 150px;
+  border: 1px solid #e4e4e4;
 }
 
+
 .action_widget_moive_preview video{
-    width: 100%;
+  width: 100%;
 }
 
 .tools {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: -30px;
-    width: 24px;
-    background-color: rgba(0, 0, 0, 0.55);
-    text-align: center;
-    vertical-align: middle;
-    -webkit-transition: all .2s ease;
-    -moz-transition: all .2s ease;
-    -o-transition: all .2s ease;
-    transition: all .2s ease;
-    z-index: 999;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: -30px;
+  width: 24px;
+  background-color: rgba(0, 0, 0, 0.55);
+  text-align: center;
+  vertical-align: middle;
+  -webkit-transition: all .2s ease;
+  -moz-transition: all .2s ease;
+  -o-transition: all .2s ease;
+  transition: all .2s ease;
+  z-index: 999;
 }
 
 .tools.tools-right {
-    left: auto;
-    right: -30px
+  left: auto;
+  right: -30px
 }
 
 .tools.tools-bottom {
-    width: auto;
-    height: 28px;
-    left: 0;
-    right: 0;
-    top: auto;
-    bottom: -30px
+  width: auto;
+  height: 28px;
+  left: 0;
+  right: 0;
+  top: auto;
+  bottom: -30px
 }
 
 .tools.tools-top {
-    width: auto;
-    height: 28px;
-    left: 0;
-    right: 0;
-    top: -30px;
-    bottom: auto
+  width: auto;
+  height: 28px;
+  left: 0;
+  right: 0;
+  top: -30px;
+  bottom: auto
 }
 
 div:hover>.tools {
-    left: 0
+  left: 0
 }
 
 div:hover>.tools.tools-bottom {
-    top: auto;
-    bottom: 0
+  top: auto;
+  bottom: 0
 }
 
 div:hover>.tools.tools-top {
-    bottom: auto;
-    top: 0
+  bottom: auto;
+  top: 0
 }
 
 div:hover>.tools.tools-right {
-    left: auto;
-    right: 0
+  left: auto;
+  right: 0
 }
 
 .tools>a{
-    display: inline-block;
-    color: #FFF;
-    font-size: 18px;
-    font-weight: normal;
-    padding: 4px;
+  display: inline-block;
+  color: #FFF;
+  font-size: 18px;
+  font-weight: normal;
+  padding: 4px;
 }
 
 .tools>a:hover{
-    text-decoration: none;
-    color: #c9e2ea;
+  text-decoration: none;
+  color: #c9e2ea;
 
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .tools.tools-bottom>a{
-    display: inline-block
+  display: inline-block
 }
 #effect_big_preview {
-    display: none;
-    position: absolute;
-    width: 706px;
-    height: 500px;
-    opacity: 0.4;
-    background: #000000;
-    left:0px;
-    top:0px;
+  display: none;
+  position: absolute;
+  width: 706px;
+  height: 500px;
+  opacity: 0.4;
+  background: #000000;
+  left:0px;
+  top:0px;
 }
 #cover_setting {
-    display: none;
+  display: none;
 }
 
 .material_popup .hook {
-    height: 45px;
-    width: 90%;
-    border: 1px solid #eed3d7;
-    background: #EDEDF7;
-    bottom: 0px;
-    float: left;
-    text-align: center;
-    line-height: 40px;
-    margin-top: 13px;
-    margin-left: 23px;
+  height: 45px;
+  width: 90%;
+  border: 1px solid #eed3d7;
+  background: #EDEDF7;
+  bottom: 0px;
+  float: left;
+  text-align: center;
+  line-height: 40px;
+  margin-top: 13px;
+  margin-left: 23px;
 }
 
 #taglist {
-    list-style: none;
-    padding-left: 0px;
-    margin: 0 0 0px 0;
+  list-style: none;
+  padding-left: 0px;
+  margin: 0 0 0px 0;
+}
+
+#_action_type_jump {
+  margin-left: 133px;
 }
