Bugfix: multi-commit of apply

--- a/views/content_layout.html
+++ b/views/content_layout.html
@@ -75,6 +75,7 @@
       <div class="modal-body" style="padding-bottom: 0px">
         <div class="row">
           <form class="form-horizontal" role="form">
+            <input type="hidden" name="confirmId" id="confirmId">
             <div class="form-group">
               <label for="keywordsText" class="col-lg-3 control-label">承認者</label>
               <div class="col-lg-7">
