增加了类型图片

--- a/views/content_synthetic.html
+++ b/views/content_synthetic.html
@@ -170,7 +170,7 @@
                   </div>
                   <div id="collapseOne" class="panel-collapse collapse in">
                     <div class="panel-body">
-                      <img width="300px" src="/images/demo/image.png">
+                      <img width="300px" src="/images/image.png">
                     </div>
                   </div>
                 </div>
@@ -187,7 +187,7 @@
                   </div>
                   <div id="collapseTwo" class="panel-collapse collapse">
                     <div class="panel-body">
-                      <img width="300px" src="/images/demo/anime.png">
+                      <img width="300px" src="/images/anime.png">
                     </div>
                   </div>
                 </div>
@@ -204,7 +204,7 @@
                   </div>
                   <div id="collapseThree" class="panel-collapse collapse">
                     <div class="panel-body">
-                      <img width="300px" src="/images/demo/caseview.png">
+                      <img width="300px" src="/images/caseview.png">
                     </div>
                   </div>
                 </div>
@@ -221,7 +221,7 @@
                   </div>
                   <div id="collapseFour" class="panel-collapse collapse">
                     <div class="panel-body">
-                      <img width="300px" src="/images/demo/gallery.png">
+                      <img width="300px" src="/images/gallery.png">
                     </div>
                   </div>
                 </div>
