--- a/views/content_synthetic_add.html
+++ b/views/content_synthetic_add.html
@@ -462,7 +462,7 @@
 </script>
 <script type="text/template" id="tmpl_tag_item_all">
   <li class="tag">
-    <a data="all">全部</a>
+    <a data="all">All</a>
   </li>
 </script>
 
