--- a/views/top_signin.html
+++ b/views/top_signin.html
@@ -32,13 +32,13 @@
         <div class="form-group">
           <div class="input-group">
             <span class="input-group-addon"><i class="icon-envelope"></i></span>
-            <input type="text" class="form-control" placeholder="e-mail" id="name" name="name" value="">
+            <input type="text" class="form-control" placeholder="e-mail" id="name" name="name" value="l_li@dreamarts.co.jp">
           </div>
         </div>
         <div class="form-group">
           <div class="input-group">
             <span class="input-group-addon "><i class="icon-key"></i></span>
-            <input type="password" class="form-control" placeholder="password" id="pass" name="pass" value="">
+            <input type="password" class="form-control" placeholder="password" id="pass" name="pass" value="l_li">
           </div>
         </div>
         <div class="form-group">
