--- a/views/content_synthetic.html
+++ b/views/content_synthetic.html
@@ -58,7 +58,7 @@
             <tr>
               <th>#</th>
               <th>表紙</th>
-              <th>ネタ</th>
+              <th>タイトル</th>
               <th>タイプ</th>
               <th>ページ</th>
               <th>更新者</th>
