--- a/views/content_synthetic_add.html
+++ b/views/content_synthetic_add.html
@@ -339,7 +339,8 @@
                 </div>
               </div>
             </form>
-            <div id="preview"><img src="/images/block.png"></div>
+            <div id="preview"><img src="/images/block.png">
+            <span>x</span></div>
           </div>
         </div>
       </div>
